--- a/ecommerce-generic-app/CollectionViewCell.xib
+++ b/ecommerce-generic-app/CollectionViewCell.xib
@@ -12,16 +12,16 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CollectionViewCell" id="gTV-IL-0wX" customClass="CollectionViewCell" customModule="ecommerce_generic_app" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="188" height="166"/>
+            <rect key="frame" x="0.0" y="0.0" width="188" height="183"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="188" height="166"/>
+                <rect key="frame" x="0.0" y="0.0" width="188" height="183"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8uc-gP-upa">
-                        <rect key="frame" x="0.0" y="0.0" width="188" height="166"/>
+                        <rect key="frame" x="0.0" y="0.0" width="188" height="183"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zAf-oV-quq">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zAf-oV-quq">
                                 <rect key="frame" x="8" y="8" width="172" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
@@ -33,16 +33,16 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ExZ-V0-7PO">
-                                <rect key="frame" x="8" y="139" width="172" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ExZ-V0-7PO">
+                                <rect key="frame" x="8" y="156" width="172" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="eJ9-JS-TT9">
-                                <rect key="frame" x="0.0" y="66" width="188" height="65"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="eJ9-JS-TT9">
+                                <rect key="frame" x="0.0" y="66" width="188" height="82"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="65" id="ujz-5x-bbk"/>
+                                    <constraint firstAttribute="height" constant="82" id="Eqa-rV-ZjP"/>
                                 </constraints>
                             </imageView>
                         </subviews>
@@ -71,14 +71,14 @@
                 <constraint firstItem="8uc-gP-upa" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="bkZ-cm-ZXs"/>
                 <constraint firstItem="8uc-gP-upa" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="uj6-D9-ibo"/>
             </constraints>
-            <size key="customSize" width="188" height="166"/>
+            <size key="customSize" width="188" height="183"/>
             <connections>
                 <outlet property="price" destination="ExZ-V0-7PO" id="vBh-3R-znY"/>
                 <outlet property="productImage" destination="eJ9-JS-TT9" id="hZ5-6T-9LN"/>
                 <outlet property="subTitle" destination="9zW-bL-iMo" id="edT-2m-Gaw"/>
                 <outlet property="title" destination="zAf-oV-quq" id="HKp-bJ-Rva"/>
             </connections>
-            <point key="canvasLocation" x="103" y="51"/>
+            <point key="canvasLocation" x="103" y="59.5"/>
         </collectionViewCell>
     </objects>
 </document>
