--- a/ecommerce-generic-app/ListTableViewCell.xib
+++ b/ecommerce-generic-app/ListTableViewCell.xib
@@ -11,31 +11,31 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ListTableViewCell" rowHeight="151" id="KGk-i7-Jjw" customClass="ListTableViewCell" customModule="ecommerce_generic_app" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="255" height="151"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ListTableViewCell" rowHeight="183" id="KGk-i7-Jjw" customClass="ListTableViewCell" customModule="ecommerce_generic_app" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="276" height="183"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="255" height="150.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="276" height="182.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4mP-of-jQX">
-                        <rect key="frame" x="8" y="16" width="239" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LS0-Sa-RUh">
-                        <rect key="frame" x="8" y="120" width="239" height="21"/>
+                        <rect key="frame" x="8" y="16" width="260" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="OjT-XG-UVd">
-                        <rect key="frame" x="0.0" y="45" width="255" height="67"/>
+                        <rect key="frame" x="0.0" y="45" width="276" height="100"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="67" id="Tjw-BR-idg"/>
+                            <constraint firstAttribute="height" constant="100" id="Tjw-BR-idg"/>
                         </constraints>
                     </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LS0-Sa-RUh">
+                        <rect key="frame" x="8" y="153" width="260" height="21"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
                 <constraints>
                     <constraint firstItem="OjT-XG-UVd" firstAttribute="top" secondItem="4mP-of-jQX" secondAttribute="bottom" constant="8" id="Aqo-R2-twa"/>
@@ -44,10 +44,11 @@
                     <constraint firstAttribute="trailing" secondItem="LS0-Sa-RUh" secondAttribute="trailing" constant="8" id="Ox3-xC-8EA"/>
                     <constraint firstItem="LS0-Sa-RUh" firstAttribute="top" secondItem="OjT-XG-UVd" secondAttribute="bottom" constant="8" id="ToC-PK-nY5"/>
                     <constraint firstItem="LS0-Sa-RUh" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="UKm-19-RWB"/>
-                    <constraint firstAttribute="bottom" secondItem="LS0-Sa-RUh" secondAttribute="bottom" constant="9.5" id="ZJ2-0H-4sP"/>
+                    <constraint firstItem="OjT-XG-UVd" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="hYy-hs-5Cr"/>
+                    <constraint firstAttribute="bottom" secondItem="LS0-Sa-RUh" secondAttribute="bottom" constant="8.5" id="kXV-fp-Vln"/>
                     <constraint firstItem="4mP-of-jQX" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="nHd-AV-lLI"/>
-                    <constraint firstItem="OjT-XG-UVd" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="qX4-vl-La4"/>
                     <constraint firstAttribute="trailing" secondItem="4mP-of-jQX" secondAttribute="trailing" constant="8" id="rYq-Sb-PP1"/>
+                    <constraint firstAttribute="trailing" secondItem="OjT-XG-UVd" secondAttribute="trailing" id="xsZ-XH-3jw"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
@@ -55,7 +56,7 @@
                 <outlet property="productName" destination="4mP-of-jQX" id="77K-d4-hdG"/>
                 <outlet property="productPrice" destination="LS0-Sa-RUh" id="PNb-cr-2nL"/>
             </connections>
-            <point key="canvasLocation" x="1.5" y="107.5"/>
+            <point key="canvasLocation" x="12" y="123.5"/>
         </tableViewCell>
     </objects>
 </document>
